# engine-room

./: .dockerignore  .gitignore  .gitleaks.toml  CLAUDE.md  CONTEXT.md  Makefile  QUESTIONS.md  README.md  SECURITY.md  docker-compose.yml  zensical.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  deploy-frontend.yml  deploy.yml  docs.yml  publish-sdk.yml  security.yml
docs/: DEPLOY.md  DEVELOPER-WORKFLOWS.md  PRD.md  README.md  WORKFLOW-ADOPTION.md  architecture.md  configuration.md  index.md  installation.md
docs/adr/: 0000-template.md  0001-time-control-floor.md  0002-transport-websocket.md  0003-clock-bot-eats-latency.md  0004-disconnect-reconnect-window.md  0005-stack-fastapi-postgres-ts.md  0006-rules-authority-python-chess.md  0007-move-wire-format-uci.md  0008-result-and-termination-vocabulary.md  0009-core-domain-entities.md  0010-game-lifecycle-state-machine.md  0011-elo-matchmaking-and-ratings.md  0012-matchmaking-pool-and-queue-policy.md  0013-human-auth-github-oauth.md  0014-bot-api-keys-and-handshake.md  0015-spectator-delivery-sse.md  0016-mvp-defaults-batch.md  0017-frontend-svelte.md  0018-persistence-model.md  0019-abuse-prevention.md  0020-worker-assignment-topology.md  0021-client-sdk-and-uci-bridge.md  0022-onboarding-and-house-bots.md  0023-mvp-scope-and-success.md  0024-bot-tooling-uv-and-optional-container.md  0025-a2-consistency-pass.md  0026-hosting-fly-neon.md
docs/design/: CONTEXT.md  PRD.md  PROTOCOL.md  QUESTIONS.md  REQS.md
docs/sdk/: api.md  index.md  tutorial.md  uci.md
docs/shaping/: V1-plan.md  V2-kickoff.md  V2-plan.md  V3-kickoff.md  V3-plan.md  V4-plan.md  V5-plan.md  V6-plan.md  V7-plan.md  frame.md  shaping.md  slices.md
frontend/: .gitignore  Dockerfile  README.md  fly.toml  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: sdk.spec.ts  smoke.spec.ts
frontend/src/lib/: Board.svelte  ReplayControls.svelte  api.ts  auth.ts
frontend/src/routes/: +layout.ts  +page.svelte
frontend/src/routes/bots/: +page.svelte
frontend/src/routes/bots/[id]/: +page.svelte
frontend/src/routes/gallery/: +page.svelte
frontend/src/routes/leaderboard/: +page.svelte
frontend/src/routes/tournaments/: +page.svelte
frontend/src/routes/tournaments/[id]/: +page.svelte
frontend/src/routes/tournaments/new/: +page.svelte
frontend/src/routes/watch/: +page.svelte
scripts/: demo_bot.py
scripts/git-hooks/: pre-push
sdk/chessroom/: README.md  pyproject.toml
sdk/chessroom/src/chessroom/: __init__.py  _minimax.py  bot.py  bots.py
sdk/chessroom/tests/: fakeserver.py  test_boundary.py  test_play.py  test_uci.py
sdk/engineroom/: README.md  pyproject.toml
sdk/engineroom/src/engineroom/: __init__.py  _config.py  _greedy.py  bot.py  bots.py  const.py  protocol.py  transport.py  uci.py
sdk/engineroom/tests/: fakeserver.py  test_boundary.py  test_config.py  test_play.py  test_uci.py
sdk/house_bots/: runner.py
sdk/quickstart/: .env.example  Dockerfile  README.md  pyproject.toml  random_bot.py
server/: .env.example  Dockerfile  README.md  alembic.ini  fly.toml  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0001_games.py  0002_identity.py  0003_ratings.py  0004_ambient_house_bot.py  0005_house_bot_personas.py  0006_access_tokens.py  0007_tournaments.py
server/engine_room/: __init__.py  app.py  channels.py  config.py  ids.py  observability.py
server/engine_room/auth/: __init__.py  backend.py  deps.py  oauth.py  schemas.py  users.py
server/engine_room/bots/: __init__.py  authenticator.py  keys.py  routes.py  schemas.py  service.py
server/engine_room/devtools/: __init__.py  demo_bot.py  mint_bot.py
server/engine_room/game/: ambient.py  clock.py  game.py  house_bots.py  house_clients.py  minimax.py  ratings.py  registry.py  seat.py  worker.py
server/engine_room/matchmaking/: elo.py  launcher.py  matcher.py  pool.py  queue.py  ticket.py
server/engine_room/persistence/: db.py  finalize.py  models.py  reader.py  seed.py
server/engine_room/protocol/: messages.py
server/engine_room/pubsub/: base.py  inproc.py  redis.py
server/engine_room/spectate/: games.py  leaderboard.py  presence.py  sse.py
server/engine_room/tournaments/: __init__.py  manager.py  routes.py  schedule.py  service.py
server/engine_room/ws/: bot_endpoint.py  session.py  session_registry.py
server/tests/: fake_client.py  test_v1_finalize.py  test_v1_game_loop.py  test_v1_handshake_seek.py  test_v1_pairing.py  test_v1_spectate_live.py  test_v1_worker.py
server/tests/integration/: conftest.py  test_bot_game_history.py  test_kan51_leaderboard.py  test_kan55_direct_challenge_live.py  test_kan56_tournament_live.py  test_kan61_oop_house_bots_live.py  test_kan62_redis_pubsub.py  test_kan72_revocable_sessions.py  test_v1_finalize.py  test_v1_spectate_live.py  test_v2_bots_crud.py  test_v2_key_rotation_evicts.py  test_v2_keys.py  test_v2_migrations.py  test_v2_oauth.py  test_v2_ws_live.py  test_v3_matchmaking_live.py  test_v4_heartbeat_abort_live.py  test_v4_reconnect_live.py  test_v5_outcomes_live.py  test_v5_ratings_finalize.py  test_v6_ambient_live.py  test_v6_lobby_replay.py  test_v6_sse_rating.py  test_v7_sdk_live.py
server/tests/support/: fake_client.py
server/tests/unit/: test_kan209_presence.py  test_kan56_schedule.py  test_kan57_bullet_increment.py  test_kan61_house_clients.py  test_kan63_observability.py  test_minimax.py  test_pubsub.py  test_v1_game_loop.py  test_v1_handshake_seek.py  test_v1_pairing.py  test_v1_spectate.py  test_v2_auth_wiring.py  test_v2_db_url.py  test_v2_keys.py  test_v2_oauth_cookie.py  test_v2_session_registry.py  test_v2_ws_auth.py  test_v3_elo_pool.py  test_v3_launcher.py  test_v3_matcher.py  test_v3_protocol_config.py  test_v4_forfeit.py  test_v4_live_state.py  test_v4_protocol_config.py  test_v4_seat_idempotency.py  test_v5_outcomes.py  test_v5_ratings_protocol.py  test_v5_resign_seam.py  test_v6_ambient.py  test_v6_lobby.py  test_v8_spa_fallback.py
