[project]
name = "engine-room"
version = "0.1.0"
description = "Real-time matchmaking & spectating platform for AI chess bots — server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "chess>=1.11",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "websockets>=13",  # real-server SSE/e2e tests
    "ruff>=0.6",  # lint + import sort
    "testcontainers>=4",  # ephemeral Postgres for integration tests
    "psycopg[binary]>=3.2",  # sync driver for testcontainers' readiness check
]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["alembic/versions"]  # generated migrations follow their own template

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle errors, pyflakes, import sorting

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine_room"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["tests"]  # so `support.fake_client` (shared WS test seam) imports cleanly
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:",
]
