[project]
name = "chessroom"
version = "0.1.0"
description = "Official Python SDK for Engine Room — write a chess bot, connect it to the live platform"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "websockets>=13",
    "chess>=1.11",
]

# The SDK depends ONLY on the public wire-protocol spec (docs/design/PROTOCOL.md),
# never on server internal code (ADR-0021 decoupling). A boundary test asserts the
# package imports no `engine_room`. It currently lives in this monorepo as a package
# (V7 Q1) and will be extracted to a standalone published repo later (V7 O-2).

[project.scripts]
chessroom-uci = "chessroom.uci:main"

[project.urls]
Homepage = "https://engine-room.fly.dev"
Protocol = "https://github.com/leejianrong/engine-room/blob/main/docs/design/PROTOCOL.md"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chessroom"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["tests"]
