[project]
name = "engineroom"
version = "0.1.0"
description = "Official Python SDK for Engine Room — write a chess bot, connect it to the live platform"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Engine Room" }]
keywords = ["chess", "bot", "ai", "websocket", "engine", "uci", "matchmaking", "engine-room"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "websockets>=16.1",
    "chess>=1.11",
]

# The SDK depends ONLY on the public wire-protocol spec (docs/design/PROTOCOL.md),
# never on server internal code (ADR-0021 decoupling). A boundary test asserts the
# package imports no `engine_room`. It currently lives in this monorepo as a package
# (V7 Q1) and will be extracted to a standalone published repo later (V7 O-2).

[project.scripts]
engineroom-uci = "engineroom.uci:main"

[project.urls]
Homepage = "https://engine-room.fly.dev"
Repository = "https://github.com/leejianrong/engine-room"
Documentation = "https://github.com/leejianrong/engine-room/blob/main/sdk/engineroom/README.md"
Protocol = "https://github.com/leejianrong/engine-room/blob/main/docs/design/PROTOCOL.md"
Changelog = "https://github.com/leejianrong/engine-room/releases"
Issues = "https://github.com/leejianrong/engine-room/issues"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.22",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engineroom"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["tests"]
